# Clawlippytm.ai.Bots

./: .gitignore  PROJECT_ROLE.md  README.md  REPO_AWARENESS.md  REPO_LINKS.md  SYSTEM_ARCHITECTURE.md  __init__.py  engine.py  pyproject.toml
agents/: __init__.py  base_agent.py  swarm_coordinator.py
clawlippytm/: __init__.py  agents.py  bot.py  cognitive_reasoning.py  creativity.py  devops.py  diagnostics.py
clawlippytm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cognitive_reasoning/: __init__.py  decision_maker.py  knowledge_base.py  reasoning_engine.py
diagnostics/: __init__.py  health_monitor.py  logger.py  metrics_collector.py
docs/bots/: product-family.md
docs/integrations/: openclaw-myclaw-handoff.md
docs/operations/: escalation-rules.md
feedback_loops/: __init__.py  adapter.py  evaluator.py  feedback_manager.py
issues/: 2026-03-19-01-31-45-investigate_missing_work.md
tests/: __init__.py  test_agents.py  test_agents_and_engine.py  test_bot.py  test_cognitive_reasoning.py  test_creativity.py  test_devops.py  test_diagnostics.py  test_feedback_loops.py
